@@ -14,6 +14,8 @@ Changes in 3.1.3
        is wrong resulting in corrupt resource forks after the
        conversion. Bug #568.
 * FIX: ad: fix for bug #563 broke ad file utilities, bug #570.
+* NEW: afpd: new advanced option controlling permissions and ACLs,
+       from FR #93
 
 Changes in 3.1.2
 ================
